refactor: improve code